fix(#select): adjust overflow wrapper

--- a/src/components/Form/controls/Select/styles.module.scss
+++ b/src/components/Form/controls/Select/styles.module.scss
@@ -14,7 +14,7 @@
 }
 
 .wrapper-opened {
-  z-index: 1005;
+  z-index: 100001;
 }
 
 .input {
